<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activitys.ExcerciseActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF"
        android:theme="@style/ToolBarTheme"
        />

    <LinearLayout
        android:id="@+id/llRestView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_exercise_activity"
        android:layout_marginTop="-1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Volume:" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:max="10"
            android:progress="3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/workoutTime"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/et_custom"
                android:gravity="center"
                android:hint="@string/workout_time_seconds"
                android:numeric="integer|decimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/restTime"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/et_custom"
                android:gravity="center"
                android:hint="@string/rest_time_seconds"
                android:numeric="integer" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/intervalCountText"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/et_custom"
                android:gravity="center"
                android:hint="@string/interval_amount"
                android:numeric="integer|decimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/startButton"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorAccent"
            android:drawableStart="@drawable/ic_start_flag"
            android:elevation="10dp"
            android:gravity="center"
            android:onClick="start"
            android:padding="5dp"
            android:text="Start"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intervalCountExercise"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/intervalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/startFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/buttonpip"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:drawableStart="@drawable/ic_minimize"
            android:elevation="10dp"
            android:gravity="center"
            android:onClick="goPip"
            android:padding="5dp"
            android:text="Minimize"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="101dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="54dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="10" />


            </LinearLayout>

        </FrameLayout>


        <TextView
            android:id="@+id/quit"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorAccent"
            android:drawableStart="@drawable/ic_quit"
            android:elevation="10dp"
            android:gravity="center"
            android:onClick="quit"
            android:padding="5dp"
            android:text="Quit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <TextView
                android:id="@+id/tvExerciseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarExercise"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_gray"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvExerciseTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="60" />

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>